Re #2: add z-index on footer-social container so that the phone layer doesn't prevent clicking on the social icons

--- a/assets/css/shoutrageous.css
+++ b/assets/css/shoutrageous.css
@@ -178,6 +178,10 @@ a:hover {
   margin-top: -3%;
 }
 
+#footer-social .container {
+    z-index: 2;
+}
+
 @media (max-width: 991px) {
   #footer-social {
     margin-top: 0;
